Changed the favicon

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>osmos::feed</title>
+  <title>News Feed</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="robots" content="noindex, nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="alternate" type="application/rss+xml" title="osmos::feed" href="feed.atom" />
+  <link rel="alternate" type="application/rss+xml" title="News Feed" href="feed.atom" />
   <link href="index.css" rel="stylesheet" />
   <!-- %before-head-end.html% -->
 </head>
@@ -12845,7 +12845,8 @@ K-Drama 
 
 
 
-	…</span>
+	
+…</span>
                   </div>
                 </a>
               </details>
@@ -17328,7 +17329,8 @@ K-Drama 
 		
 STOMP it anytime, anywhere.
 
-…</span>
+
+…</span>
                   </div>
                 </a>
               </details>
@@ -17619,7 +17621,8 @@ K-Drama 
 	
 
 	
-…</span>
+
+…</span>
                   </div>
                 </a>
               </details>
@@ -20882,7 +20885,8 @@ K-Drama 
 		
 STOMP it anytime, anywhere.
 
-…</span>
+
+…</span>
                   </div>
                 </a>
               </details>
@@ -21197,7 +21201,8 @@ K-Drama 
 		
 STOMP it anytime, anywhere.
 
-…</span>
+
+…</span>
                   </div>
                 </a>
               </details>
