--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="alternate" type="application/rss+xml" title="News Feed" href="feed.atom" />
   <link href="index.css" rel="stylesheet" />
+  <script>if(!sessionStorage.getItem("_swa")&&document.referrer.indexOf(location.protocol+"//"+location.host)!== 0){fetch("https://counter.dev/track?"+new URLSearchParams({referrer:document.referrer,screen:screen.width+"x"+screen.height,user:"bryanlue721",utcoffset:"8"}))};sessionStorage.setItem("_swa","1");</script>
   <!-- %before-head-end.html% -->
 </head>
 
